--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="canvas.js"></script>
     <link rel="stylesheet" href="canvas.css" />
 
+    <script src="barchart.js"></script>
 </head>
 <body>
 
