container3のスタイルを消去

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="container" style="width: 700px; height: 800px; margin: 0 auto;position: absolute; left: 500px; top: 200px"></div>
 <div id="container2" style="width: 500px; height: 800px; margin: 0 auto;position: absolute; left: 1300px; top: 200px"></div>
-<div id="container3" style="width: 500px; height: 800px; margin: 0 auto;position: absolute; left: 2000px; top: 200px"></div>
+<div id="container3" />
 <div id="container4" style="width: 500px; height: 800px; margin: 0 auto;position: absolute; left: 2000px; top: 800px"></div>
 
 
